[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/TitleHUD/TitleHUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://graphics/custom_ui/locker.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 56
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 2 )

[node name="TitleHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HUD_Container" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD_Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -244.0
margin_right = 244.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 1 )
text = "RunJump"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="HUD_Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -244.0
margin_top = 96.0
margin_right = 244.0
margin_bottom = 145.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "High Score: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HUD_Container"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -244.0
margin_top = -192.0
margin_right = 244.0
margin_bottom = -96.0
custom_fonts/font = SubResource( 3 )
text = "Tap to play"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="HUD_Container"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -258.0
margin_top = -64.0
custom_fonts/font = SubResource( 4 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyButton" type="Button" parent="HUD_Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -105.0
margin_top = 170.0
margin_right = 105.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 5 )
text = "Normal"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterButton" type="Button" parent="HUD_Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -105.0
margin_top = 250.0
margin_right = 105.0
margin_bottom = 314.0
custom_fonts/font = SubResource( 5 )
text = "Green"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockIcon" type="TextureRect" parent="HUD_Container"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -180.0
margin_top = 250.0
margin_right = -116.0
margin_bottom = 314.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockLabel" type="Label" parent="HUD_Container"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -199.0
margin_top = 330.0
margin_right = 199.0
margin_bottom = 411.0
custom_fonts/font = SubResource( 10 )
text = "Score x with y on z to unlock"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="HUD_Container"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -64.0
margin_right = 128.0
custom_fonts/font = SubResource( 6 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitDialog" type="PopupDialog" parent="HUD_Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD_Container/QuitDialog"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -164.0
margin_top = 15.0
margin_right = 164.0
margin_bottom = 95.0
grow_horizontal = 2
custom_fonts/font = SubResource( 7 )
text = "Quit game?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbortQuitButton" type="Button" parent="HUD_Container/QuitDialog"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -100.0
margin_right = -34.0
margin_bottom = -28.0
custom_fonts/font = SubResource( 8 )
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmQuitButton" type="Button" parent="HUD_Container/QuitDialog"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -100.0
margin_right = 134.0
margin_bottom = -28.0
custom_fonts/font = SubResource( 8 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveWarning" type="Panel" parent="HUD_Container"]
visible = false
anchor_left = 0.5
anchor_top = 0.625
anchor_right = 0.5
anchor_bottom = 0.625
margin_left = -200.0
margin_top = -190.0
margin_right = 200.0
margin_bottom = 110.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD_Container/SaveWarning"]
modulate = Color( 1, 0.247059, 0.247059, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 9 )
text = "The save file loaded is of an 
incompatible format. You 
may be trying to load a file
from a newer version of the
game, or your save file is 
corrupted. Saving will be
disabled until you solve
this issue, to prevent
overwriting data."
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HUD_Container/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="HUD_Container/DifficultyButton" to="." method="_on_DifficultyButton_pressed"]
[connection signal="pressed" from="HUD_Container/CharacterButton" to="." method="_on_CharacterButton_pressed"]
[connection signal="pressed" from="HUD_Container/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="HUD_Container/QuitDialog/AbortQuitButton" to="." method="_on_AbortQuitButton_pressed"]
[connection signal="pressed" from="HUD_Container/QuitDialog/ConfirmQuitButton" to="." method="_on_ConfirmQuitButton_pressed"]
